# flaccheck

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  package-lock.json  package.json  thresholds.calibrated.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
crates/flaccheck-cli/: Cargo.toml
crates/flaccheck-cli/src/: args.rs  benchmark.rs  features.rs  main.rs  report.rs  scan.rs  ui.rs
crates/flaccheck-cli/tests/: cli_integration.rs
crates/flaccheck-core/: Cargo.toml
crates/flaccheck-core/src/: calibration.rs  fusion.rs  lib.rs  verdict.rs
crates/flaccheck-decode/: Cargo.toml
crates/flaccheck-decode/src/: ffmpeg.rs  lib.rs  symphonia_decode.rs
crates/flaccheck-detectors/: Cargo.toml
crates/flaccheck-detectors/src/: pipeline.rs
crates/flaccheck-detectors/src/artifacts/: mod.rs
crates/flaccheck-detectors/src/hires/: mod.rs
crates/flaccheck-detectors/src/quant/: mod.rs
crates/flaccheck-detectors/src/spectral/: mod.rs
crates/flaccheck-detectors/tests/: dataset_suite.rs  ffmpeg_matrix.rs  golden.rs
crates/flaccheck-ml/: Cargo.toml
crates/flaccheck-ml/src/: classical.rs  lib.rs  mel.rs  onnx_infer.rs
crates/flaccheck-testkit/: Cargo.toml
crates/flaccheck-testkit/src/: corpus.rs  metrics.rs  synth.rs
crates/flaccheck-testkit/tests/: metrics_tests.rs
crates/flaccheck-web/: Cargo.toml
crates/flaccheck-web/src/: lib.rs
crates/flaccheck-web/src/assets/: app.js  index.html
crates/lossless-scan-cli/: Cargo.toml
crates/lossless-scan-cli/src/: args.rs  benchmark.rs  features.rs  lib.rs  main.rs  report.rs  scan.rs  ui.rs
crates/lossless-scan-cli/tests/: cli_integration.rs
crates/lossless-scan-core/: Cargo.toml
crates/lossless-scan-core/src/: analyze.rs  calibration.rs  evidence.rs  fusion.rs  lib.rs  ml_features.rs  pcm.rs  scan_mode.rs  verdict.rs
crates/lossless-scan-decode/: Cargo.toml
crates/lossless-scan-decode/src/: ffmpeg.rs  lib.rs  symphonia_decode.rs
crates/lossless-scan-detectors/: Cargo.toml
crates/lossless-scan-detectors/src/: dsp.rs  lib.rs  pipeline.rs
crates/lossless-scan-detectors/src/artifacts/: mod.rs
crates/lossless-scan-detectors/src/hires/: mod.rs
crates/lossless-scan-detectors/src/quant/: mod.rs
crates/lossless-scan-detectors/src/spectral/: mod.rs
crates/lossless-scan-detectors/tests/: dataset_suite.rs  ffmpeg_matrix.rs  golden.rs
crates/lossless-scan-ml/: Cargo.toml
crates/lossless-scan-ml/src/: classical.rs  lib.rs  mel.rs  onnx_infer.rs
crates/lossless-scan-testkit/: Cargo.toml
crates/lossless-scan-testkit/src/: corpus.rs  lib.rs  metrics.rs  synth.rs  wav.rs
crates/lossless-scan-testkit/tests/: metrics_tests.rs
crates/lossless-scan-web/: Cargo.toml
crates/lossless-scan-web/src/: lib.rs
crates/lossless-scan-web/src/assets/: app.js  index.html  style.css
datasets/: download_benchmark_v2.sh  generate.sh  generate_realistic.sh  rebuild_manifest.sh
docs/benchmarks/: comparison.json
models/: borderline.onnx.data
research/: README.md  mel_config.py  requirements.txt  train.py  train_classical.py
scripts/: benchmark_compare.py
tests/golden/: README.md  manifest.example.json
tests/paper_regression/: README.md  benchmark.schema.json
