[workspace]
resolver = "2"
members = [
    "crates/lossless-scan-cli",
    "crates/lossless-scan-core",
    "crates/lossless-scan-decode",
    "crates/lossless-scan-detectors",
    "crates/lossless-scan-ml",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lossless-scan contributors"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
symphonia = { version = "0.5", features = [
    "flac", "wav", "pcm", "aiff", "alac", "aac", "mp3", "vorbis", "isomp4", "all-formats",
] }
rustfft = "6.2"
realfft = "3.4"
ndarray = "0.16"
minijinja = "2.7"
tract-onnx = "0.21"
