[workspace]
resolver = "2"
members = [
    "crates/flaccheck-cli",
    "crates/flaccheck-core",
    "crates/flaccheck-decode",
    "crates/flaccheck-detectors",
    "crates/flaccheck-ml",
    "crates/flaccheck-testkit",
    "crates/flaccheck-web",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["flaccheck contributors"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.18", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
symphonia = { version = "0.5", features = [
    "flac", "wav", "pcm", "aiff", "alac", "aac", "mp3", "vorbis", "isomp4", "all-formats",
] }
rustfft = "6.2"
realfft = "3.4"
ndarray = "0.16"
minijinja = "2.7"
tract-onnx = "0.23"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs"] }
tower-http = { version = "0.7", features = ["cors", "set-header"] }
mime_guess = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
