[package]
name = "flaccheck-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local web UI for flaccheck"

[dependencies]
flaccheck-core = { path = "../flaccheck-core" }
flaccheck-decode = { path = "../flaccheck-decode" }
flaccheck-detectors = { path = "../flaccheck-detectors" }
flaccheck-ml = { path = "../flaccheck-ml" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.14"
