[package]
name = "lossless-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Research-backed lossless audio authenticity CLI"
default-run = "lossless-scan"

[lib]
name = "lossless_scan"
path = "src/lib.rs"

[[bin]]
name = "lossless-scan"
path = "src/main.rs"

[features]
default = []
ml = ["lossless-scan-ml/onnx"]

[dev-dependencies]
lossless-scan-testkit = { path = "../lossless-scan-testkit" }
lossless-scan-decode = { path = "../lossless-scan-decode" }
lossless-scan-detectors = { path = "../lossless-scan-detectors" }
lossless-scan-ml = { path = "../lossless-scan-ml" }
tempfile = "3.14"

[dependencies]
lossless-scan-core = { path = "../lossless-scan-core" }
lossless-scan-decode = { path = "../lossless-scan-decode" }
lossless-scan-detectors = { path = "../lossless-scan-detectors" }
lossless-scan-ml = { path = "../lossless-scan-ml" }
lossless-scan-web = { path = "../lossless-scan-web" }
clap = { workspace = true }
console = "0.15"
comfy-table = "7.1"
indicatif = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
minijinja = { workspace = true }
tokio = { workspace = true }
