[package]
name = "lossless-scan-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lossless-scan-core = { path = "../lossless-scan-core" }
rustfft = { workspace = true }
realfft = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
approx = "0.5"
lossless-scan-testkit = { path = "../lossless-scan-testkit" }
lossless-scan-decode = { path = "../lossless-scan-decode" }
serde_json = { workspace = true }
