[package]
name = "lossless-scan-ml"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["dep:tract-onnx"]

[dependencies]
lossless-scan-core = { path = "../lossless-scan-core" }
tract-onnx = { workspace = true, optional = true }
thiserror = { workspace = true }
