[package]
name = "lossless-scan-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local web UI for lossless-scan"

[dependencies]
lossless-scan-core = { path = "../lossless-scan-core" }
lossless-scan-decode = { path = "../lossless-scan-decode" }
lossless-scan-detectors = { path = "../lossless-scan-detectors" }
lossless-scan-ml = { path = "../lossless-scan-ml" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.14"
